--- a/crates/napi/Cargo.toml
+++ b/crates/napi/Cargo.toml
@@ -4,11 +4,11 @@ description = "N-API bindings"
 edition = "2021"
 keywords = ["NodeJS", "Node", "FFI", "NAPI", "n-api"]
 license = "MIT"
-name = "napi"
+name = "napi-h"
 readme = "README.md"
 repository = "https://github.com/napi-rs/napi-rs"
 rust-version = "1.65"
-version = "2.16.0"
+version = "2.16.2"
 
 [lib]
 doctest = false
